--- a/Style.css
+++ b/Style.css
@@ -190,6 +190,10 @@ section ul li.active {
     background: rgba(0, 0, 0, 0.6);
   }
 
+  a {
+    color: #d0d324;
+  }
+
 
 @media only screen and (max-width:393px) {
     .preview-box {
@@ -250,4 +254,6 @@ section ul li.active {
         align-items: center;
         column-gap: 1rem;
       }
+
+
 }
